# LumeVisual

./: .gitignore  Cargo.toml  README.md  check_errors.txt  check_errors_v2.txt  check_errors_v3.txt  check_errors_v4.txt  check_variants.txt  triangle_debug.txt  triangle_debug_v2.txt  triangle_debug_v3.txt  triangle_debug_v4.txt
Docs/: Adaptrix_Algorithm_Guide.md  Roadmap.md  Technical_Design.md
lume-adaptrix/: Cargo.toml
lume-adaptrix/src/: lib.rs  processor.rs  renderer.rs
lume-adaptrix/src/processor/: builder.rs  mod.rs  partitioner.rs  simplifier.rs  types.rs
lume-adaptrix/src/shaders/: cull.wgsl  resolve.frag.wgsl  resolve.vert.wgsl  resolve.wgsl  visbuffer.frag.wgsl  visbuffer.vert.wgsl  visbuffer.wgsl
lume-core/: Cargo.toml
lume-core/src/: device.rs  error.rs  instance.rs  lib.rs  shader.rs
lume-examples/: Cargo.toml
lume-examples/shaders/: cluster_cull.comp  cluster_cull.comp.spv  fullscreen.vert  fullscreen.vert.spv  test.comp  test.comp.spv  textured.frag  textured.frag.spv  triangle.vert  triangle.vert.spv  visbuffer.frag  visbuffer.frag.spv  visbuffer.vert  visbuffer.vert.spv  visbuffer_resolve.frag  visbuffer_resolve.frag.spv
lume-metal/: Cargo.toml
lume-processor/: Cargo.toml
lume-processor/src/: main.rs
lume-vulkan/: Cargo.toml
lume-vulkan/src/: buffer.rs  descriptor.rs  device.rs  instance.rs  lib.rs  pipeline.rs  surface.rs  swapchain.rs  texture.rs
lume-vulkan/src/device/: descriptor.rs  mod.rs  old_device.rs  pipeline.rs  queue.rs  resource.rs
