[workspace]
resolver = "2"
members = [
    "lume-core",
    "lume-vulkan",
    "lume-metal",
    "lume-adaptrix",
    "lume-examples",
    "lume-processor",
]

[workspace.dependencies]
log = "0.4"
env_logger = "0.10"
winit = { version = "0.30", features = ["rwh_06"] }
raw-window-handle = "0.6"
ash = "0.38"
image = "0.24"
glam = "0.24"
bytemuck = { version = "1.14", features = ["derive"] }
