[package]
name = "lume-adaptrix"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
glam = { version = "0.24", features = ["bytemuck"] }
meshopt = "0.1.9"
rayon = "1.8"
tobj = "4.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
memmap2 = "0.9"
anyhow = "1.0"
lume-core = { path = "../lume-core" }
