[package]
name = "lume-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
lume-core = { path = "../lume-core" }
lume-vulkan = { path = "../lume-vulkan" }
lume-metal = { path = "../lume-metal" }
winit = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
raw-window-handle = { workspace = true }
image = { workspace = true }
