[package]
name = "lume-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
lume-core = { path = "../lume-core" }
lume-vulkan = { path = "../lume-vulkan" }
lume-metal = { path = "../lume-metal" }
winit = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
naga = { version = "23.0.0", features = ["wgsl-in", "spv-out", "glsl-in"] }
raw-window-handle = { workspace = true }
image = { workspace = true }
glam = { workspace = true }
